# CustomerSegmentationDataMining

./: .gitignore  EDA_Sven.ipynb  README.md  pyproject.toml
Dashboard/: app.py  demo_video_link.txt  requirements.txt
Dashboard/assets/: style.css
Data/: df_final_outliers.csv  scaler.pkl
deliverables/: DM2425_Part2_10_02.ipynb  DM2425_Part2_10_03.ipynb  DM2425_Part2_10_04 (kmeans_hierarchical).ipynb  DM2425_Part2_10_04(KM4KMHC4).ipynb  DM2425_Part2_10_04(kmeans44).ipynb  DM2425_Part2_10_04(kmeans54).ipynb  DM2425_Part2_10_04.ipynb  EDA.ipynb  EDA_Marco.ipynb  EDA_Marco_sec.ipynb  EDA_Sven.ipynb  EDA_Tim.ipynb  EDA_Xana.ipynb  categories.json  cui_pref_clustering_results.json  cust_behavior_clustering_results.json  dbscan_outliers.csv  initial_perspectives.json  main.py  manual_outliers.csv  perspectives.json  utils.py
previous_projects/AnaPaulino_and_SoraiaCunha_2020-21/: DM_PVA_Project_GroupAZ.ipynb
previous_projects/BeatrizSousa_2022-23/final_deliveries/: Project_GroupB.ipynb
previous_projects/CarolinaPina/: DataMining_Notebook_GroupAM.ipynb
previous_projects/MLII_AlexandraPinto_2022-23/: utils.py
