[tool.poetry]
name = "data-mining-project"
version = "0.1.0"
description = "This is the environment (for now) for the data mining project"
authors = ["Sven Goerdes <Sven@Goerdes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
pandas = "^2.2.3"
numpy = "1.26.4"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
scikit-image = "^0.24.0"
minisom = "^2.3.3"
seaborn = "^0.13.2"
graphviz = "^0.20.3"
scikit-learn-extra = "^0.3.0"
umap-learn = "^0.5.7"
dash = "^2.18.2"
dash-mantine-components = "0.12.1"

[tool.poetry.group.dev.dependencies]
nbdime = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
